--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,10 @@ cmake_minimum_required (VERSION 3.12)
 
 set(SOURCES
   main.cpp
-  qmem/qmem.cpp
+  core/op.cpp
+  core/reg.cpp
+  core/log.cpp
+  ops/hadamard.cpp
 )
 
 add_executable (qmem ${SOURCES})
